--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,21 @@ htmldocs/
 testresults
 input.txt
 output.txt
-test.nim
-test.exe
-text_splitter.exe
+src/text_splitter
+src/text_splitter.exe
+src/model
+src/model.exe
+src/view
+src/view.exe
+src/controller
+src/controller.exe
+tests/text_splitter
+tests/text_splitter.exe
+tests/megatest
+tests/megatest.exe
+tests/text_splitter.exe
 tests/test_file_empty
+tests/test_file_empty.exe
 tests/test_is_valid_extension
+tests/test_is_valid_extension.exe
+main
